<resources>
    <string name="app_name">Terrain Tracker</string>
    <string name="version_control">Version 9.1s</string>
    <string name="title_activity_time_line">Map</string>
    <string name="title_activity_emp_live_location">Map</string>
    <string name="da_bar_name">Daily Attendance</string>
    <string name="emp_att_bar_name">Emp Wise Attendance</string>
    <string name="att_approve_bar_name">Attendance Update Approval</string>
    <string name="le_record_bar_name">Leave Record</string>
    <string name="le_approve_bar_name">Leave Approval</string>
    <string name="lv_bal_bar_name">Leave Balance</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="emp_track_bar_name">Emp Track Record</string>
</resources>